# awesome-cloud-registration

./: CMakeLists.txt  Depth_00052258.pcd  Depth_00053716.pcd  Depth_00056366.pcd  README.md  SAC_IA_ICP_test.cpp
